# LearnVulkan

./: CMakeLists.txt  CMakePresets.json
projects/: CMakeLists.txt
projects/HelloWorld/: CMakeLists.txt  Triangle.hpp  config.h.in  main.cpp
projects/HelloWorld/headers/: Common.hpp  Triangle.hpp  Vertex.hpp
projects/HelloWorld/shaders/: shader.vert
projects/VkEngine/: CMakeLists.txt
projects/VkEngine/headers/: vk_engine.hpp  vk_image.hpp  vk_initializers.hpp  vk_types.hpp
projects/VkEngine/src/: main.cpp  vk_engine.cpp  vk_image.cpp
resource/models/zzz/: joe.pmx
